<resources>
    <string name="app_name">云能智能停车</string>
    <string name="common_confirm">确认</string>
    <string name="common_cancel">取消</string>
    <string name="connect_error">网络连接失败,请检查网络</string>
    <string name="connect_timeout">连接超时,请稍后再试</string>
    <string name="bad_network">服务器异常</string>
    <string name="parse_error">解析服务器响应数据失败</string>
    <string name="unknown_error">未知错误</string>
    <string name="response_return_error">服务器返回数据失败</string>
    <string name="input_phone_num">请输入手机号码</string>
    <string name="input_password">请输入登录密码</string>
    <string name="input_pay_key">请输入支付密码</string>
    <string name="input_confirm_num">请输入短信验证码</string>
    <string name="input_new_password">请输入新密码 由6-20位数字组成</string>
    <string name="input_register_password">请输入密码 由6-20位数字组成</string>
    <string name="input_real_name">请输入您的真实姓名</string>
    <string name="input_bank_num">请输入银行卡号</string>
    <string name="input_id_num">请输入您的身份证号</string>
    <string name="get_confirm_num">获取验证码</string>
    <string name="short_mess_confirm_login">短信验证登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="set_user_name">用户名设置</string>
    <string name="user_name_type">支持汉字、字母、数字</string>
    <string name="front_id_photo">本人手持身份证正面照片，请确保证件信息可见</string>
    <string name="inverse_id_photo">本人手持身份证背面照片，请确保证件信息可见</string>
    <string name="id_confirm_tip">*身份认证仅用于提供证明使用，会做到完全保密\n*人工审核需3个工作日</string>
    <string name="car_confirm_tip">*行驶证仅用于提供证明使用，会做到完全保密\n*人工审核需3个工作日\n*如需帮助，请拨打0592-2932522</string>
    <string name="driver_license_chief">请拍摄上传行驶证主页</string>
    <string name="driver_license_deputy">请拍摄上传行驶证副页</string>
    <string name="input_watch_car_monitor">请输入车位编号查看监控录像</string>
    <string name="input_opt_park_num">请输入要操作车位锁的车位编号</string>
    <string name="confirm_right_away">马上认证</string>
    <string name="search_place">搜目的地、找停车场</string>
    <string name="real_name">真实姓名</string>
    <string name="next_step">下一步</string>
    <string name="id_num">身份证号</string>
    <string name="login">登录</string>
    <string name="complete">完成</string>
    <string name="skip">跳过</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="balance">余额</string>
    <string name="deposit">押金</string>
    <string name="recharge_balance">充值余额</string>
    <string name="recharge_deposit">缴纳押金</string>
    <string name="recharge_deposit_tip">预约前需缴纳押金</string>
    <string name="recharge_deposit_tip_detail">· 充值后您将成为VIP用户，可以进行车位\n预约，享有停车优惠折扣。\n· 押金可在“个人中心-我的钱包”中提现。</string>
    <string name="pay_setting">支付设置</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="wx_pay">微信支付</string>
    <string name="yl_pay">银联支付</string>
    <string name="confirm_pay">确认支付</string>
    <string name="draw_cash">提现</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="detail">详情</string>
    <string name="watch">查看</string>
    <string name="login_or_register">注册/登录</string>
    <string name="mine_wallet">我的钱包</string>
    <string name="park_record">停车记录</string>
    <string name="order_record">预约记录</string>
    <string name="car_monitor">车辆监控</string>
    <string name="mine_car">我的车辆</string>
    <string name="id_confirm">身份认证</string>
    <string name="common_questions">常见问题</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="my_share_park">我的共享车位</string>
    <string name="manager_opt">管理员操作</string>
    <string name="advise">意见反馈</string>
    <string name="enter_personal_center">进入预约中心</string>
    <string name="setting">设置</string>
    <string name="avatar">头像</string>
    <string name="username">用户名</string>
    <string name="gender">性别</string>
    <string name="check_update">检查更新</string>
    <string name="give_a_mark">去评分</string>
    <string name="about_us">关于我们</string>
    <string name="current_version">当前版本</string>
    <string name="park_place_num">车位编号：</string>
    <string name="order_time">预约时间</string>
    <string name="share_time">共享时间：</string>
    <string name="balance_pay">账户余额支付</string>
    <string name="share_tip">请注意停车不要超出该时间段，否则需交纳超出部分N倍的金额。</string>
    <string name="order_tip">注:缴纳预约费用后才可以进行预约，不同地段预约费用不同，如果\n预约时间内未到达或者取消预约，则预约费用不予退还。</string>
    <string name="take_photo">拍照</string>
    <string name="pick_photo">从相册选择</string>
    <string name="sd_card_does_not_exist">内存卡不存在</string>
    <string name="new_energy_car">新能源汽车</string>
    <string name="bind_real_car_num">请绑定真实有效的车牌号</string>
    <string name="input_complete_info">请输入完整信息</string>
    <string name="confirm_add">确认添加</string>
    <string name="commit">提交</string>
    <string name="question_commit_success">反馈提交成功</string>
    <string name="question_commit_success_tip">工作人员将会在第一时间评估处理，\n感谢您的支持！</string>
    <string name="clear_history">清除搜索历史</string>
    <string name="input_advise">请输入您要反馈的问题</string>
    <string name="describe_question">请描述您的问题</string>
    <string name="car_confirm">车辆认证</string>
    <string name="in_progress">进行中</string>
    <string name="off_the_stock">已完成</string>
    <string name="no_more_data">没有更多记录了</string>
    <string name="add_car">添加车辆</string>
    <string name="go_pay">去交费</string>
    <string name="attention_tip">注意事项</string>
    <string name="modify_pay_key">修改支付密码</string>
    <string name="find_back_pay_key">找回支付密码</string>
    <string name="half_penny_without_key">小额免密</string>
    <string name="half_penny_without_key_pay">小额免密支付</string>
    <string name="draw_bank">到账银行卡</string>
    <string name="draw_num">提现金额</string>
    <string name="bank_card_owner">持卡人</string>
    <string name="bank_card_num">银行卡号</string>
    <string name="bank">所在银行</string>
    <string name="phone_num">手机号码</string>
    <string name="logout">退出登录</string>
    <string name="chinese_money_symbol">￥</string>
    <string name="company_name">©厦门云能信息科技有限公司</string>
    <string name="customer_service_phone_num">客服电话：0592-2932522</string>
    <string name="two_hours_receive">2小时到账</string>
    <string name="recharge_tip">余额可在“个人中心-我的钱包”中提现。</string>
    <string name="half_penny_without_key_tip">开启后，支付无需输入密码</string>
    <string name="pay_park_tip1">1.不同停车地点计价规则会有不同；</string>
    <string name="pay_park_tip2">2.如遇到车位锁损坏或特殊情况，请拨打客服\n电话(0592-2932522)或者联系现场工作人员。</string>
    <string name="input_park_num_to_pay">请输入车位编号去交费</string>
    <string name="my_car_tip">*已进行身份、车辆且已缴纳押金用户可以进行\n车位预约。</string>
    <string name="commend_al_pay">推荐有支付宝账户的用户使用</string>
    <string name="commend_wx_pay">推荐已安装微信的用户使用</string>
    <string name="commend_yl_pay">输入银行卡无需开通网银即可支付</string>
    <string name="more_question_call">更多问题请拨打客服热线：0592-2932522</string>
    <string name="draw_cash_success">提现成功</string>
    <string name="draw_cash_success_tip">已经成功提现，预计0-3个工作日到账</string>
    <string name="zero_to_five_days_arrive">预计0-3个工作日到账</string>
    <string name="draw_cash_commit_success">提交成功</string>
    <string name="draw_cash_commit_success_tip">申请提交成功，请去我的个人中心查看</string>
    <string name="draw_cash_dealing">处理中</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="draw_cash_dealing_tip">请耐心等待</string>
    <string name="message_permission_always_failed">我们需要以下权限，请在设置中为我们开启：\n\n%1$s</string>

    <!--停车记录-->
    <string name="search_stop_record">请输入停车场或地址</string>
    <string name="area_position">区域位置</string>
    <string name="distance_first">距离优先</string>
    <!--共享车位-->
    <string name="park_num">车位编号：%s</string>
    <string name="up_lock_tip">您确认升起车位锁吗？</string>
    <string name="down_lock_tip">您确认降下车位锁吗？</string>
    <!--预约记录-->
    <string-array name="appointment_title_array">
        <item>进行中</item>
        <item>已完成</item>
    </string-array>
    <string name="appointment_ing_tip">预约中，请耐心等待一分钟左右。</string>
    <string name="navigation">导航</string>
    <string name="confirm_arrive">确认到达</string>
    <string name="cancel_appointment">取消预约</string>
    <string name="appointment_ing_tip1">*请您于预约时间点前到达车位，否则车位不予保留。</string>
    <!--选择车位-->
    <string name="unit_num">车位编号：</string>
    <string name="appointmented_time">被预约时间：</string>
    <string name="p_fee">停车费：</string>
</resources>
