<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/text_gray_16sp"
            android:layout_width="70dp"
            android:layout_marginLeft="20dp"
            android:text="@string/bank_card_owner"
            android:textColor="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp15"
            android:background="@null"
            android:hint="@string/input_real_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/dp1"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/text_gray_16sp"
            android:layout_marginLeft="20dp"
            android:width="70dp"
            android:text="@string/id_num"
            android:textColor="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp15"
            android:background="@null"
            android:hint="@string/input_id_num"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/dp1"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/text_gray_16sp"
            android:layout_width="70dp"
            android:layout_marginLeft="20dp"
            android:text="@string/bank_card_num"
            android:textColor="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp15"
            android:background="@null"
            android:hint="@string/input_bank_num"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/dp1"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/text_gray_16sp"
            android:layout_width="70dp"
            android:layout_marginLeft="20dp"
            android:text="@string/bank"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp15"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/dp1"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/text_gray_16sp"
            android:layout_width="70dp"
            android:layout_marginLeft="20dp"
            android:text="@string/phone_num"
            android:textColor="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp15"
            android:background="@null"
            android:hint="@string/input_phone_num"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size16" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_bg_blue"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>
