<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_skip"
                style="@style/text_gray_14sp"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                android:layout_marginTop="18dp"
                android:drawablePadding="3dp"
                android:drawableRight="@mipmap/img_right_arrow"
                android:gravity="center"
                android:text="@string/skip"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_bottom_black_line"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_gray_14sp"
                    android:text="@string/real_name"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/et_real_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:background="@null"
                    android:hint="@string/input_real_name"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_bottom_black_line"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_gray_14sp"
                    android:text="@string/id_num"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/et_id_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:background="@null"
                    android:hint="@string/input_id_num"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_id_pos"
                android:layout_width="151dp"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/img_upload" />

            <TextView
                style="@style/text_gray_14sp"
                android:layout_marginTop="10dp"
                android:text="@string/front_id_photo"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/iv_id_neg"
                android:layout_width="151dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/img_upload" />

            <TextView
                style="@style/text_gray_14sp"
                android:layout_marginTop="10dp"
                android:text="@string/inverse_id_photo"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_next_step"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_bg_blue"
                android:text="@string/next_step"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                style="@style/text_gray_14sp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/id_confirm_tip" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
