<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <TextView
        android:id="@+id/tv_skip"
        style="@style/text_gray_14sp"
        android:layout_gravity="right"
        android:layout_marginRight="16dp"
        android:layout_marginTop="18dp"
        android:drawablePadding="3dp"
        android:drawableRight="@mipmap/img_right_arrow"
        android:gravity="center"
        android:text="@string/skip"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/iv_upload_img"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@mipmap/img_add_avatar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_bottom_black_line"
        android:orientation="horizontal">

        <TextView
            style="@style/text_gray_14sp"
            android:text="@string/set_user_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/user_name_type"
            android:textSize="14sp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_bottom_black_line"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/female" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_next_step"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_bg_blue"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size18" />

</LinearLayout>
