<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/img_splash_logo" />

    <TextView
        style="@style/text_black_18sp"
        android:layout_marginTop="22dp"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size24" />

    <Space
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="0dp" />

    <TextView
        style="@style/text_black_18sp"
        android:text="@string/customer_service_phone_num" />

    <TextView
        style="@style/text_gray_16sp"
        android:layout_marginTop="@dimen/dp15"
        android:layout_marginBottom="@dimen/dp60"
        android:text="@string/company_name" />

</LinearLayout>
