<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_skip"
                style="@style/text_gray_16sp"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="3dp"
                android:drawableRight="@mipmap/img_right_arrow"
                android:gravity="center"
                android:text="@string/skip" />

            <ImageView
                android:id="@+id/iv_license_pos"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <TextView
                style="@style/text_gray_14sp"
                android:layout_marginTop="5dp"
                android:text="@string/driver_license_chief" />

            <ImageView
                android:id="@+id/iv_license_neg"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <TextView
                style="@style/text_gray_14sp"
                android:layout_marginTop="5dp"
                android:text="@string/driver_license_deputy" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/confirm_right_away" />

            <TextView
                style="@style/text_gray_14sp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/car_confirm_tip" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
